# soundex

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
gtest/: CMakeLists.txt
include/: soundex.hpp
src/: CMakeLists.txt  soundex.cpp
test/: CMakeLists.txt  simple.cpp  soundexFuzz.cpp  soundexTest.cpp
